CameraSourcePreview and GraphicOverlay Sources
Changed CameraSourcePreview from:
com.google.android.gms.samples.vision.barcodereader.ui.camera.CameraSourcePreview
To:
StockApp.StockApp.UI.CameraSourcePreview

Changed GraphicOverlay from:
com.google.android.gms.samples.vision.barcodereader.ui.camera.GraphicOverlay
To:
StockApp.StockApp.UI.GraphicOverlay

--- a/StockApp/Resources/layout/Barcode_Capture.axml
+++ b/StockApp/Resources/layout/Barcode_Capture.axml
@@ -8,16 +8,16 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-  <com.google.android.gms.samples.vision.barcodereader.ui.camera.CameraSourcePreview
+  <StockApp.StockApp.UI.CameraSourcePreview
       android:id="@+id/preview"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-    <com.google.android.gms.samples.vision.barcodereader.ui.camera.GraphicOverlay
+    <StockApp.StockApp.UI.GraphicOverlay
         android:id="@+id/graphicOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-  </com.google.android.gms.samples.vision.barcodereader.ui.camera.CameraSourcePreview>
+  </StockApp.StockApp.UI.CameraSourcePreview>
 
 </LinearLayout>
