--- a/StockApp/Resources/layout/Barcode_Capture.axml
+++ b/StockApp/Resources/layout/Barcode_Capture.axml
@@ -8,16 +8,16 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-  <StockApp.StockApp.UI.CameraSourcePreview
+  <stockapp.stockapp.ui.CameraSourcePreview
       android:id="@+id/preview"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-    <StockApp.StockApp.UI.GraphicOverlay
+    <stockapp.stockapp.ui.GraphicOverlay
         android:id="@+id/graphicOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-  </StockApp.StockApp.UI.CameraSourcePreview>
+  </stockapp.stockapp.ui.CameraSourcePreview>
 
 </LinearLayout>
