--- a/StockApp/Resources/layout/Barcode_Capture.axml
+++ b/StockApp/Resources/layout/Barcode_Capture.axml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/topLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true">
-
-  <stockapp.stockapp.ui.CameraSourcePreview
-      android:id="@+id/preview"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
-
-    <stockapp.stockapp.ui.GraphicOverlay
-        android:id="@+id/graphicOverlay"
+    <stockapp.stockapp.ui.CameraSourcePreview
+        android:id="@+id/preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-  </stockapp.stockapp.ui.CameraSourcePreview>
-
+        android:layout_height="match_parent">
+        <stockapp.stockapp.ui.GraphicOverlay
+            android:id="@+id/graphicOverlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </stockapp.stockapp.ui.CameraSourcePreview>
 </LinearLayout>
