--- a/StockApp/Resources/layout/Fragment_BarcodeMain.axml
+++ b/StockApp/Resources/layout/Fragment_BarcodeMain.axml
@@ -36,24 +36,28 @@
             android:id="@+id/read_barcode"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true" />
-        <CheckBox
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/auto_focus"
-            android:id="@+id/auto_focus"
-            android:layout_below="@+id/barcode_value"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="66dp"
-            android:checked="false" />
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/use_flash"
-            android:id="@+id/use_flash"
-            android:layout_alignTop="@+id/auto_focus"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:checked="false" />
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true">
+            <RadioGroup
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <RadioButton
+                    android:id="@+id/addItem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add Item"
+                    android:onClick="onRadioButtonClicked" />
+                <RadioButton
+                    android:id="@+id/removeItem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Remove Item"
+                    android:onClick="onRadioButtonClicked" />
+            </RadioGroup>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
