--- a/StockApp/Resources/layout/StockItem_Fragment.axml
+++ b/StockApp/Resources/layout/StockItem_Fragment.axml
@@ -4,7 +4,11 @@
     android:layout_height="match_parent"
     android:id="@+id/gridLayout1"
     android:rowCount="2"
-    android:columnCount="2">
+    android:columnCount="2"
+    android:background="@drawable/border"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingBottom="5dp">
     <ImageView
         android:src="@android:drawable/ic_menu_gallery"
         android:id="@+id/ItemImage"
