Added Google Sign In
Added Global Application Class
Added Google Sign In Class and Listener

Changed way detailed Item View is populated and displayed. No Longer uses an additonal http request. Uses global list with provided position.

--- a/StockApp/Resources/layout/Activity_ScreenSlide.axml
+++ b/StockApp/Resources/layout/Activity_ScreenSlide.axml
@@ -3,7 +3,16 @@
     android:id="@+id/relLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+  <android.support.v7.widget.Toolbar
+    android:id="@+id/my_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="?attr/actionBarSize"
+    android:background="?attr/colorPrimary"
+    android:elevation="4dp"
+    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+   />
     <LinearLayout
+        android:layout_below ="@+id/my_toolbar"
         android:layout_width="fill_parent"
         android:id="@+id/home_layout"
         android:orientation="vertical"
