--- a/StockApp/Resources/layout/StockItem_Detailed.axml
+++ b/StockApp/Resources/layout/StockItem_Detailed.axml
@@ -5,36 +5,40 @@
     android:id="@+id/StockDetailed"
     android:rowCount="3"
     android:columnCount="2">
-  <TextView
-      android:text="Text"
-      android:id="@+id/DetailedItemName"
-      android:layout_marginRight="145.0dp"
-      android:layout_marginBottom="100.0dp"
-      android:layout_column="0"
-      android:layout_row="0"
-      android:layout_columnSpan="2"/>
-  
-  <ImageView
-      android:src="@android:drawable/ic_menu_gallery"
-      android:id="@+id/DetailedItemImage"
-      android:layout_marginRight="150.0dp"
-      android:layout_marginBottom="100.0dp"
-      android:layout_column="0"
-      android:layout_row="1" />
-  <TextView
-      android:text="Text"
-      android:id="@+id/DetailedItemStatistics"
-      android:layout_marginRight="145.0dp"
-      android:layout_marginBottom="100.0dp"
-      android:layout_column="1"
-      android:layout_row="1" />
-  <TextView
-    android:text="Text"
-    android:id="@+id/DetailedItemDescription"
-    android:layout_marginRight="145.0dp"
-    android:layout_marginBottom="100.0dp"
-    android:layout_column="0"
-    android:layout_row="2"
-    android:layout_columnSpan="2"/>
-
+    <TextView
+        android:text="Text"
+        android:id="@+id/DetailedItemName"
+        android:layout_marginRight="145.0dp"
+        android:layout_marginBottom="100.0dp"
+        android:layout_column="0"
+        android:layout_row="0"
+        android:layout_columnSpan="2" />
+    <ImageView
+        android:src="@android:drawable/ic_menu_gallery"
+        android:id="@+id/DetailedItemImage"
+        android:layout_marginRight="150.0dp"
+        android:layout_marginBottom="100.0dp"
+        android:layout_column="0"
+        android:layout_row="1" />
+    <TextView
+        android:text="Text"
+        android:id="@+id/DetailedItemStatistics"
+        android:layout_marginRight="145.0dp"
+        android:layout_marginBottom="100.0dp"
+        android:layout_column="1"
+        android:layout_row="1" />
+    <LinearLayout
+        android:id="@+id/DetailedItemDescription"
+        android:layout_marginRight="145.0dp"
+        android:layout_marginBottom="100.0dp"
+        android:layout_column="0"
+        android:layout_row="2"
+        android:layout_columnSpan="2">
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="1"
+            android:id="@+id/nutritionTable">
+        </TableLayout>
+    </LinearLayout>
 </GridLayout>
