--- a/StockApp/Resources/layout/Fragment_BarcodeMain.axml
+++ b/StockApp/Resources/layout/Fragment_BarcodeMain.axml
@@ -14,7 +14,7 @@
             android:gravity="top"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textSize="50sp"
-            android:text="Stauts Message" />
+            android:text="@string/statusMessage" />
         <TextView
             android:id="@+id/txtBarcodeValue"
             android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical" >
+        android:orientation="vertical">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,24 +37,22 @@
             android:id="@+id/read_barcode"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true" />
-      
         <Button
-          android:text="Confirm"
-          android:id="@+id/confirm"
-          android:layout_width="wrap_content" 
-          android:layout_height="wrap_content"
-          android:layout_alignParentBottom="true"
-          android:layout_centerHorizontal="true"
-          android:visibility="gone"/>
-      <Button
-          android:text="Delete"
-          android:id="@+id/delete"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentBottom="true"
-          android:layout_centerHorizontal="true"
-          android:visibility="gone"/>
-        
+            android:text="Confirm"
+            android:id="@+id/confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
+        <Button
+            android:text="Delete"
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
